# loft-orbital

./: .gitignore  .pylintrc  README.md  docker-compose.yaml  makefile  manage.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflow/: django-ci.yml  main.yml
.github/workflows/: django.yml
loft_orbital/: asgi.py  settings.py  urls.py  wsgi.py
loft_orbital/temp_monitoring/: admin.py  apps.py  models.py  schema.py  tasks.py
loft_orbital/temp_monitoring/fixtures/: temps.json
loft_orbital/temp_monitoring/migrations/: 0001_initial.py
loft_orbital/temp_monitoring/tests/: test_query.py
